--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oregon_Trails_Simulator</title>
+    <title>Oregon_Trails_Simulator_2</title>
 </head>
 <body>
     
